--- a/examples/md-flexible/input/testTuning/MDFlex_Case2.yaml
+++ b/examples/md-flexible/input/testTuning/MDFlex_Case2.yaml
@@ -25,6 +25,6 @@ Objects:
       particle-spacing           :  0.5
       bottomLeftCorner           :  [0, 0, 0]
       velocity                   :  [0, 0, 0]
-      particleTypeStr            :  0
+      particleTypeId             :  0
 no-flops                         :  true
 no-end-config                    :  true
