--- a/.github/workflows/TestSuites.yaml
+++ b/.github/workflows/TestSuites.yaml
@@ -120,7 +120,7 @@ jobs:
       - name: Run tests ${{ matrix.part }}/2
         run: |
           # For Multi-Site Molecule Md-flexible builds, only run tests for md-flexible.
-          if [ "${{ md-flex-mode }}" = 0 ]
+          if [ "${{ matrix.md-flex-mode }}" = 0 ]
             then
             # derive whether or not to run with MPI.
             if [ "${{ matrix.config[1] }}" = 'mpicc' ]
