Corrections to CMake such that applicationLibrary tests are made

--- a/applicationLibrary/CMakeLists.txt
+++ b/applicationLibrary/CMakeLists.txt
@@ -33,6 +33,7 @@ target_include_directories(SPHLibrary PUBLIC ./sph)
 # --- molecular dynamics ---
 
 if (AUTOPAS_BUILD_TESTS)
+    message(STATUS "applicationLibrary - adding all tests")
     file(
             GLOB_RECURSE
             SS_TEST_SRC
