Doxygen no longer builds documentation for tests in application library

--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -8,7 +8,8 @@ INPUT                  = @PROJECT_SOURCE_DIR@/@DOXY_MAIN_PAGE@ \
                          @PROJECT_SOURCE_DIR@/tests/testAutopas/testingHelpers/ \
                          @PROJECT_SOURCE_DIR@/docs \
                          @PROJECT_SOURCE_DIR@/tools \
-                         @PROJECT_SOURCE_DIR@/applicationLibrary
+                         @PROJECT_SOURCE_DIR@/applicationLibrary/molecularDynamics/molecularDynamicsLibrary \
+                         @PROJECT_SOURCE_DIR@/sph/SPHLibrary
 FILE_PATTERNS          = *.h \
                          *.cuh \
                          *.cpp \
