--- a/examples/md-flexible/input/testDynamicVerletListsCells/fallingDropStaticPairs.yaml
+++ b/examples/md-flexible/input/testDynamicVerletListsCells/fallingDropStaticPairs.yaml
@@ -1,5 +1,5 @@
 container                        :  [PairwiseVerletLists]
-verlet-rebuild-frequency         :  8
+verlet-rebuild-frequency         :  12
 verlet-skin-radius-per-timestep  :  0.075
 verlet-cluster-size              :  4
 selector-strategy                :  Fastest-Absolute-Value
@@ -9,8 +9,8 @@ tuning-strategy                  :  full-Search
 tuning-interval                  :  2500
 tuning-samples                   :  3
 tuning-max-evidence              :  10
-functor                          :  Lennard-Jones
-newton3                          :  [disabled]
+functor                          :  Lennard-Jones avx
+newton3                          :  [enabled]
 cutoff                           :  3
 box-min                          :  [0, 0, 0]
 box-max                          :  [7.25, 7.25, 7.25]
@@ -48,7 +48,7 @@ Objects:
 #   thermostatInterval             :  10
 #   addBrownianMotion              :  false
 vtk-filename                     :  fallingDropStaticPairs
-vtk-write-frequency              :  100000
+vtk-write-frequency              :  100
 no-flops                         :  false
 no-end-config                    :  true
 log-level                        :  error
