--- a/src/autopas/CMakeLists.txt
+++ b/src/autopas/CMakeLists.txt
@@ -38,6 +38,7 @@ target_compile_definitions(
     $<$<NOT:$<BOOL:${AUTOPAS_OPENMP}>>:EIGEN_DONT_PARALLELIZE>
     $<$<BOOL:${AUTOPAS_INCLUDE_MPI}>:AUTOPAS_INCLUDE_MPI>
     $<$<BOOL:${AUTOPAS_INTERNODE_TUNING}>:AUTOPAS_INTERNODE_TUNING>
+    $<$<BOOL:${AUTOPAS_ENABLE_3_BODY_INTERACTIONS}>:AUTOPAS_ENABLE_3_BODY_INTERACTIONS>
     _USE_MATH_DEFINES
 )
 
