included mipp header files in cmake

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -4,7 +4,7 @@ include(autopas_harmony)
 include(autopas_eigen)
 
 add_subdirectory(fake-dlclose)
-include(autopas_highway)
+include(autopas_mipp)
 include(autopas_xsimd)
 
 # the other libraries in this folder are needed from elsewhere (examples, test, ...)
