Completing the reversal of fusing the sph cpp files into the headers

--- a/applicationLibrary/CMakeLists.txt
+++ b/applicationLibrary/CMakeLists.txt
@@ -127,7 +127,7 @@ if (AUTOPAS_BUILD_TESTS)
 
     target_link_libraries(
             sphLibTests PUBLIC
-            autopas autopasTools gmock
+            autopas autopasTools SPHLibrary gmock
     )
 
     # this cmake module was only introduced in 3.10
