--- a/examples/md-flexible/input/AllOptions.yaml
+++ b/examples/md-flexible/input/AllOptions.yaml
@@ -36,17 +36,15 @@ globalForce                          :  [0, 0, 0]
 load-balancer                        :  InvertedPressure
 Sites:
   0:
-    site-id                      :  0
-    site-epsilon                 :  1.
-    site-sigma                   :  1.
-    site-mass                    :  0.5
+    epsilon                          :  1.
+    sigma                            :  1.
+    mass                             :  0.5
 # Uncomment below to run a multi-site simulation.
 #Molecules:
 #  0:
-#    molecule-type: 0
-#    molecule-to-site-id: [ 0, 0, 0 ]
-#    molecule-to-site-pos: [ [ 0.74349607, 1.20300191, 0. ], [ 0.3249197, -1.37638192, 0. ], [-1.37638192, -0.3249197, 0. ] ]
-#    molecule-moment-of-inertia: [ 5.23606798, 0.76393202, 6. ]
+#    site-types                       : [ 0, 0, 0 ]
+#    relative-site-positions          : [ [ 0.74349607, 1.20300191, 0. ], [ 0.3249197, -1.37638192, 0. ], [-1.37638192, -0.3249197, 0. ] ]
+#    moment-of-inertia                : [ 5.23606798, 0.76393202, 6. ]
 Objects:                         
   CubeGrid:
     0:
@@ -54,7 +52,7 @@ Objects:
       particle-spacing               :  1.1225
       bottomLeftCorner               :  [0, 0, 0]
       velocity                       :  [0, 0, 0]
-      particleTypeId                 :  0
+      particle-type-id               :  0
   CubeGauss:
     0:
       distribution-mean              :  [2, 2, 2]
@@ -63,28 +61,28 @@ Objects:
       box-length                     :  [8, 8, 8]
       bottomLeftCorner               :  [15, 15, 15]
       velocity                       :  [0, 0, 0]
-      particleTypeId                 :  0
+      particle-type-id               :  0
   CubeUniform:
     0:
       numberOfParticles              :  100
       box-length                     :  [10, 10, 10]
       bottomLeftCorner               :  [15, 0, 0]
       velocity                       :  [0, 0, 0]
-      particleTypeId                 :  0
+      particle-type-id               :  0
   CubeClosestPacked:
     0:
       box-length                     :  [4, 4, 4]
       bottomLeftCorner               :  [0, 0, 15]
       particle-spacing               :  1.1225
       velocity                       :  [0, 0, 0]
-      particleTypeId                 :  0
+      particle-type-id               :  0
   Sphere:
     0:
       center                         :  [4, 16, 4]
       radius                         :  3
       particle-spacing               :  1.1225
       velocity                       :  [0, 0, 0]
-      particleTypeId                 :  0
+      particle-type-id               :  0
 thermostat:
   initialTemperature                 :  1
   targetTemperature                  :  4
