--- a/examples/md-flexible/input/SpinodalDecomposition.yaml
+++ b/examples/md-flexible/input/SpinodalDecomposition.yaml
@@ -9,10 +9,15 @@ iterations                       :  30000
 boundary-type                    :  [periodic, periodic, periodic]
 Sites:
   0:
-    site-id                      : 0
-    site-epsilon                 : 1.
-    site-sigma                   : 1.
-    site-mass                    : 1.
+    epsilon                      :  1.
+    sigma                        :  1.
+    mass                         :  1.
+# Uncomment below to run a multi-site simulation.
+#Molecules:
+#  0:
+#    site-types                   :  [ 0 ]
+#    relative-site-positions      :  [ [0, 0, 0 ] ]
+#    moment-of-inertia            :  [ 1., 1., 1. ]
 thermostat:
   initialTemperature             :  0.7
   targetTemperature              :  0.7
