--- a/examples/md-flexible/input/explodingLiquid.yaml
+++ b/examples/md-flexible/input/explodingLiquid.yaml
@@ -21,20 +21,19 @@ iterations                       :  12000
 boundary-type                    : [periodic, periodic, periodic]
 Sites:
   0:
-    site-id                      :  0
-    site-epsilon                 :  1.
-    site-sigma                   :  1.
-    site-mass                    :  1.
+    epsilon                      :  1.
+    sigma                        :  1.
+    mass                         :  1.
+# Uncomment below to run a multi-site simulation.
 #Molecules:
 #  0:
-#    molecule-id                  :  0
-#    molecule-to-site-id          :  [ 0 ]
-#    molecule-to-site-pos         : [ [0, 0, 0 ] ]
-#    molecule-moment-of-inertia   : [ 1., 1., 1. ]
+#    site-types                   :  [ 0 ]
+#    relative-site-positions      :  [ [0, 0, 0 ] ]
+#    moment-of-inertia            :  [ 1., 1., 1. ]
 Objects:                         
   CubeClosestPacked:
     0:
-      particleTypeId             :  0
+      particle-type-id           :  0
       box-length                 :  [15, 6, 15]
       bottomLeftCorner           :  [0, 27, 0]
       particle-spacing           :  1.
