--- a/examples/md-flexible/input/testTuning/MDFlex_Case1.yaml
+++ b/examples/md-flexible/input/testTuning/MDFlex_Case1.yaml
@@ -12,10 +12,9 @@ deltaT                           :  0
 iterations                       :  188
 Sites:
   0:
-    site-id                      :  0
-    site-epsilon                 :  1
-    site-sigma                   :  1
-    site-mass                    :  1
+    epsilon                      :  1.
+    sigma                        :  1.
+    mass                         :  1.
 Objects:                         
   CubeGrid:
     0:  
@@ -23,7 +22,7 @@ Objects:
       particle-spacing           :  0.5
       bottomLeftCorner           :  [0, 0, 0]
       velocity                   :  [0, 0, 0]
-      particleTypeId             :  0
+      particle-type-id           :  0
 no-flops                         :  true
 no-end-config                    :  true
 
