--- a/examples/md-flexible/input/testTuning/MDFlex_Case2.yaml
+++ b/examples/md-flexible/input/testTuning/MDFlex_Case2.yaml
@@ -14,10 +14,9 @@ cell-size                        :  [1.0,1.5,2.0]
 iterations                       :  842
 Sites:
   0:
-    site-id                      :  0
-    site-epsilon                 :  1
-    site-sigma                   :  1
-    site-mass                    :  1
+    epsilon                      :  1.
+    sigma                        :  1.
+    mass                         :  1.
 Objects:                         
   CubeGrid:
     0:  
@@ -25,6 +24,6 @@ Objects:
       particle-spacing           :  0.5
       bottomLeftCorner           :  [0, 0, 0]
       velocity                   :  [0, 0, 0]
-      particleTypeId             :  0
+      particle-type-id           :  0
 no-flops                         :  true
 no-end-config                    :  true
