--- a/examples/md-flexible/tests/yamlTestFiles/molParsingTest.yaml
+++ b/examples/md-flexible/tests/yamlTestFiles/molParsingTest.yaml
@@ -2,23 +2,19 @@
 # Used to test correct parsing of site information, in the case that the site information is correctly given.
 Sites:
   1:
-    site-id:      0
-    site-epsilon: 1.
-    site-sigma:   1.
-    site-mass:    1.
+    epsilon: 1.
+    sigma:   1.
+    mass:    1.
   2:
-    site-id:      1
-    site-epsilon: 1.2
-    site-sigma:   0.8
-    site-mass:    0.5
+    epsilon: 1.2
+    sigma:   0.8
+    mass:    0.5
 Molecules:
   0:
-    molecule-id:                0
-    molecule-to-site-id:        [0]
-    molecule-to-site-pos:       [[0., 0., 0.]]
-    molecule-moment-of-inertia: [1., 1., 1.]
+    site-types:                    [0]
+    relative-site-positions:       [[0., 0., 0.]]
+    moment-of-inertia:             [1., 1., 1.]
   1:
-    molecule-id:                1
-    molecule-to-site-id:        [0, 0, 1 ]
-    molecule-to-site-pos:       [[ 0., -0.5, 0.], [1., 0.1, 0.01], [-0.2, -0.3, 0.4]]
-    molecule-moment-of-inertia: [ 1., 0.5, 0.25 ]
+    site-types:                    [0, 0, 1 ]
+    relative-site-positions:       [[ 0., -0.5, 0.], [1., 0.1, 0.01], [-0.2, -0.3, 0.4]]
+    moment-of-inertia:             [ 1., 0.5, 0.25 ]
