--- a/examples/md-flexible/tests/yamlTestFiles/multipleSimilarObjects.yaml
+++ b/examples/md-flexible/tests/yamlTestFiles/multipleSimilarObjects.yaml
@@ -2,13 +2,13 @@
 Objects:
   CubeGrid:
     0:
-     particleTypeId:  0
+    particle-type-id:  0
      particles-per-dimension: [10,10,10]
      particle-spacing: 0.5
      velocity: [0.,0.,0.]
      bottomLeftCorner: [5.,5.,5.]
     1:
-     particleTypeId:  1
+     particle-type-id:  1
      particles-per-dimension: [10,10,10]
      particle-spacing: 0.5
      velocity: [0.,0.,0.]
