--- a/examples/md-flexible/tests/yamlTestFiles/siteParsingTest.yaml
+++ b/examples/md-flexible/tests/yamlTestFiles/siteParsingTest.yaml
@@ -2,12 +2,10 @@
 # Used to test correct parsing of site information, in the case that the site information is correctly given.
 Sites:
   1:
-    site-id:      0
-    site-epsilon: 1.
-    site-sigma:   1.
-    site-mass:    1.
+    epsilon: 1.
+    sigma:   1.
+    mass:    1.
   2:
-    site-id:      1
-    site-epsilon: 1.2
-    site-sigma:   0.8
-    site-mass:    0.5
+    epsilon: 1.2
+    sigma:   0.8
+    mass:    0.5
